# spring-generate

./: README.md  package.json  tsconfig.json
src/: App.tsx  routes.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/ClearBoth/: index.tsx
src/components/Header/: index.tsx
src/components/PageContainer/: index.tsx
src/generate/: CodeGenerate.ts  DatabaseGenerate.ts  DocumentGenerate.ts  JavaCodeGenerate.ts
src/libs/: app.ts  date.ts  file.ts  modal.ts
src/models/: ObjectField.ts  ObjectTable.ts  Project.ts
src/pages/NewProject/: index.css  index.tsx
src/pages/TableEdit/: index.css  index.tsx
src/pages/TableEdit/components/: EditObjectTableDialog.tsx
src/pages/Welcome/: index.css  index.tsx
src/template/: javaController.ts  javaEntity.ts  javaException.ts  javaMapper.ts  javaServiceTemplate.ts  markdownDocument.ts
